--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -17,7 +17,7 @@ body {
 .modal-overlay {
   position: absolute;
   background-color: rgba(199, 222, 215, 0.2);
-  backdrop-filter: blur(1rem);
+  backdrop-filter: blur(1.7rem);
   width: 100%;
   height: 100vh;
   z-index: 3;
